# prompt_manager

./: .gitignore  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  vite.config.ts
docs/superpowers/plans/: 2026-05-18-prompt-manager-mvp-implementation.md
docs/superpowers/specs/: 2026-05-17-prompt-manager-mvp-design.md
src/: App.test.tsx  App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: analytics.rs  analytics_test.rs  commands.rs  domain.rs  error.rs  evaluation.rs  evaluation_test.rs  judge.rs  judge_test.rs  main.rs  model_client.rs  model_client_test.rs  secrets.rs  state.rs
src-tauri/src/db/: migrations.rs  mod.rs  repo.rs  repo_test.rs
src/components/: CaseManager.tsx  ModelConfigDialog.test.tsx  ModelConfigDialog.tsx  PromptEditor.test.tsx  PromptEditor.tsx  ResultBadge.tsx  RunControls.tsx  RunHistory.test.tsx  RunHistory.tsx  Sidebar.tsx  Tabs.tsx  VersionCaseResults.test.tsx  VersionCaseResults.tsx  VersionMatrix.test.tsx  VersionMatrix.tsx
src/domain/: finalResult.test.ts  finalResult.ts  matrix.test.ts  matrix.ts
src/lib/: api.ts
